Implement Codex CLI backend parity

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 TELEGRAM_BOT_TOKEN=
-# Auth: run 'claude login' to authenticate with your Max subscription
+# Auth: run 'codex login' and optionally 'claude login' for Claude sessions
 DEEPGRAM_API_KEY=
 ALLOWED_USER_IDS=
 DEFAULT_WORKING_DIR=/home/user
